# Chatting_System

./: .gitignore  README.md  pyproject.toml
ChatApp/: models.py  views.py
ChatApp/migrations/: 0003_userreg_is_set_auth.py  0004_userreg_auth_token.py
Chatting_System/: urls.py
static/css/: header_footer.css  history_profilePic.css  login_home_updatepassword.css  register_recovery.css
templates/: add_auth.html  authentication.html  change_pic.html  chat.html  history.html  turnoff_auth.html  updatepw.html  user_lists.html
