[project]
name = "chatting-system"
version = "0.1.0"
description = "Django project"
authors = [
    {name = "Satyabrata Panda",email = "pandasatyabrata566@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "datetime (>=5.5,<6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
